# cmake_bug

./: CMakeLists.txt  FooConfig.cmake.in  Readme.md
src/: CMakeLists.txt
src/Fuz/: CMakeLists.txt  Foo.cpp  Foo.hpp
